# memorial-hackathon

client/fieldsync-client/: index.html  package-lock.json  package.json
client/fieldsync-client/src/: App.tsx
client/fieldsync-client/src/components/: Agent.tsx
super-agent/: pyproject.toml
super-agent/app/modules/agent/: context_agent.py  main_graph.py  super_daily_agent.py  worker_daily_agent.py
super-agent/app/modules/db/: db.py
super-agent/app/modules/db/setup/: README  cwallet.sso  ewallet.p12  ewallet.pem  keystore.jks  truststore.jks
super-agent/app/modules/model/: model_with_output.py  oci_openai_client.py
super-agent/app/modules/tools/: db_tool.py
super-agent/app/server/: agent_service.py  endpoint.py
super-agent/app/util/config/: config.yaml
super-agent/app/util/docs/: super_schema.json  test.json  worker_schema.json
test/: .gitignore  endpoint.py  main.py  pyproject.toml
test/modules/: RealtimeClientExample.py  daily_agent.py  server.py  stt_model.py  tools.py
test/rt-web-sdk/: .gitignore
test/rt-web-sdk/example-client/: index.ts
test/rt-web-sdk/example-client/react-client/: package-lock.json  package.json
test/rt-web-sdk/example-client/react-client/src/: App.tsx  index.css
test/rt-web-sdk/example-client/react-client/src/components/: report.tsx
test/util/: db.py  oci_openai_client.py
test/util/config/: config.yaml
test/util/db/: README  cwallet.sso  db.py  ewallet.p12  ewallet.pem  keystore.jks  tnsnames.ora  truststore.jks
test/util/docs/: schema.json
test/util/tools/: db_tool.py  weather.py
(+1 files in other folders)
